--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "http://zip520123.github.io/myapp",
+  "homepage": "http://zip520123.github.io/",
   "devDependencies": {
     "gh-pages": "^1.2.0"
   }
