--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
-  "homepage": "http://zip520123.github.io/",
+  "homepage": "http://zip520123.github.io",
   "devDependencies": {
     "gh-pages": "^1.2.0"
   }
